# Stamps

Stamps_CPP/: CMakeLists.txt  README.md  building_step_by_step.txt
Stamps_CPP/LINUX/stamps_cpp_Nuke161/: init.py  stamps_cpp.py
Stamps_CPP/LINUX/stamps_cpp_Nuke170/: menu.py  stamps_cpp_config.py
Stamps_CPP/src/: StampAnchor.cpp  StampCommon.h  StampDeep.cpp  StampWired.cpp
